# blackout

./: .gitignore  CONFIG.md  Cargo.toml  README.md  blackout_debug.txt  setup.sh
.github/workflows/: release.yml
blackout/: Cargo.toml
blackout-core/: Cargo.toml
blackout-core/src/: config.rs  event.rs  generator.rs  ipc.rs  lib.rs  storage.rs  vault.rs
blackout-daemon/: Cargo.toml
blackout-daemon/src/: config.rs  daemon.rs  handle.rs  lib.rs  main.rs
blackout/src/: app.rs  events.rs  main.rs  ui.rs
blackout/src/state/: entry.rs  form.rs  mod.rs  settings.rs  snapshots.rs
blackout/src/ui/: components.rs  mod.rs  prelude.rs
blackout/src/ui/views/: entry_detail.rs  entry_list.rs  mod.rs  settings.rs  snapshots.rs
blackoutctl/: Cargo.toml
blackoutctl/src/: app.rs  events.rs  main.rs  ui.rs
blackoutd/: Cargo.toml
blackoutd/src/: daemon.rs  handle.rs  lib.rs  main.rs
