[package]
name = "blackout-core"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
uuid = { version = "1", features = ["v7", "serde"] }
argon2 = "0.4"
rand = "0.8"
zeroize = "1.5"
chacha20poly1305 = "0.10.1"
rand_core = "0.10.0"
libc = "0.2.184"
sha2 = "0.11.0"
hex = "0.4.3"

