[package]
name = "blackout-ui"
version = "0.3.2"
edition = "2024"
description = "Ratatui-based TUI for Blackout password manager."
license = "MIT"
repository = "https://github.com/omifares/blackout"
documentation = "https://github.com/omifares/blackout"

[dependencies]
blackout-core = { path = "../blackout-core", version = "0.3.2" }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
uuid = "1.23.0"
chrono = "0.4.44"
arboard = "3.6.1"
zeroize = "1.9.0"

[[bin]]
name = "blackout"
path = "src/main.rs"
