[package]
name = "blackoutd"
version = "0.3.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
blackout-core = { path = "../blackout-core" }
serde_cbor = "0.11.2"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "time", "macros", "net", "io-util"] }
anyhow = "1.0.102"
dirs = "6.0.0"
toml = "1.1.2"
serde = "1.0.228"
tracing = "0.1.44"
serde_json = "1.0.149"
zeroize = "1.5"
argon2 = "0.5.3"
uuid = "1.23.0"
libc = "0.2.184"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
fs = "0.0.5"
